# football-betting-scores

api/: Cargo.toml  README.md
api/migrations/2022-06-08-171734_create_users/: up.sql
api/migrations/2022-06-08-175128_create_user_preferences/: down.sql  up.sql
api/migrations/2022-06-08-175156_create_scores/: up.sql
api/migrations/2022-06-08-175230_create_teams/: up.sql
api/migrations/2022-06-08-175324_create_groups/: up.sql
api/migrations/2022-06-08-175403_create_rounds/: down.sql  up.sql
api/migrations/2022-06-08-175407_create_predict_champions/: down.sql  up.sql
api/migrations/2022-06-08-175408_create_games/: up.sql
api/migrations/2022-06-08-175415_create_investments/: down.sql  up.sql
api/migrations/2022-06-08-175655_create_bets/: up.sql
api/src/: schema.rs
frontend/: package-lock.json  package.json
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/example/f2bs_app/: MainActivity.kt
mobile/android/app/src/profile/: AndroidManifest.xml
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/linux/: CMakeLists.txt  my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
